<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/landmarks_menu_item"
            android:title="@string/landmarks_menu_item_text" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/help_project_menu_item"
            android:title="@string/help_project_menu_item_text" />
    </group>

    <group android:id="@+id/grp3" android:checkableBehavior="single">
        <item
            android:id="@+id/extra_project_menu_item"
            android:title="@string/extra_project_menu_item_text" />
    </group>

</menu>
